--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Dieke Sydney. Software Engineer" />
+    <meta name="description" content="Sydney's Website. Software Engineer" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/ProPic.PNG" />
 
     <title>Dieke Sydney</title>
